--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 	<script>
 		window.fbAsyncInit = function() {
 			FB.init({
-		  	appId      : '1617493008465485',
+		  	appId      : 'XXXXXXX',
 		  	xfbml      : true,
 		  	version    : 'v2.3'
 			});
@@ -95,7 +95,7 @@
 			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-		ga('create', 'UA-63515810-1', 'auto');
+		ga('create', 'XXXXXXX', 'auto');
 		ga('send', 'pageview');
 
 		(function() {
@@ -108,12 +108,12 @@
 				s.parentNode.insertBefore(fbds, s);
 				_fbq.loaded = true;
 			}
-			_fbq.push(['addPixelId', '164304089264866'4]);
+			_fbq.push(['addPixelId', 'XXXXXXX'4]);
 		})();
 		window._fbq = window._fbq || [];
 		window._fbq.push(['track', 'PixelInitialized', {}]);
 	</script>
 	<noscript>
-		<img height="1" width="1" alt="" style="display:none" src="https://www.facebook.com/tr?id=1643040892648664&amp;ev=PixelInitialized" />
+		<img height="1" width="1" alt="" style="display:none" src="https://www.facebook.com/tr?id=&amp;ev=PixelInitialized" />
 	</noscript>
 </html>
